--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
 - type: web
   name: trinity
   runtime: node
-  repo: https://github.com/Glitch-Network/v4
+  repo: https://github.com/Glitch-Network/Trinity-OS
   branch: main
   plan: free
   region: oregon
